<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="2"
        app:srcCompat="@drawable/bmulogo" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_weight="6"
        android:columnCount="3"
        android:padding="3dp"
        android:rowCount="2">


        <android.support.v7.widget.CardView
            android:id="@+id/card_campus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/button1"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:padding="13dp"
                    android:src="@drawable/newspaper"
                    android:tint="#3366BB" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/campus_news"
                    android:textColor="#3366BB" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/button2"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/clubsicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/student_clubs"
                    android:textColor="#000000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_emergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/button3"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:padding="13dp"
                    android:src="@drawable/emergencyicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/emergency"
                    android:textColor="#000000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/button4"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/event"
                    app:layout_column="0"
                    app:layout_row="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/events"
                    android:textColor="#000000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_faculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/button5"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/facultycontact"
                    app:layout_column="1"
                    app:layout_row="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/faculty_directory"
                    android:textColor="#000000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_shuttle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/button6"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/shuttle"
                    app:layout_column="2"
                    app:layout_row="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/shuttle"
                    android:textColor="#000000" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabfacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            app:backgroundTint="#3b5998"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/facebookicon" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabinsta"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            app:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/instagram" />
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabplus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="end"
            app:backgroundTint="#d7c7b7"
            app:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
            app:layout_constraintLeft_toRightOf="@id/bottom_nav"
            app:layout_constraintRight_toLeftOf="@id/bottom_nav"
            app:layout_constraintTop_toBottomOf="@id/bottom_nav"
            app:layout_constraintTop_toTopOf="@id/bottom_nav"
            app:layout_insetEdge="bottom"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/add" />
        <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:elevation="6dp"

        android:background="#e19421"
        app:menu="@menu/bottomnav"
            app:itemIconTint="@drawable/bottomnavigationicon"
            app:itemTextColor="@drawable/bottomnavigationicon"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>